--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "start": "brunch watch --server",
     "prebuild": "npm run gen_data && npm install",
     "build": "brunch build --production",
-    "lint": "eslint . --ext .js --ext .tag --ignore-pattern public || true"
+    "lint": "eslint . --ext .js --ext .tag --ignore-pattern public || true",
+    "test": "phantomjs test/phantom_index.js"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "auto-reload-brunch": "*",
     "autoprefixer-stylus": "*",
@@ -28,6 +28,7 @@
     "eslint-brunch": "*",
     "jade-brunch": "*",
     "javascript-brunch": "*",
+    "phantomjs": "*",
     "rollup-brunch": "*",
     "rollup-plugin-babel": "*",
     "rollup-plugin-riot": "*",
