--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "prebuild": "npm run gen_data && npm install",
     "build": "brunch build --production",
     "lint": "eslint . --ext .js --ext .tag --ignore-pattern public || true",
-    "test": "phantomjs test/phantom_index.js"
+    "test": "phantomjs test/phantom_index.js && phantomjs test/phantom_waifu.js"
   },
   "dependencies": {},
   "devDependencies": {
