CV: add date diff and use lints

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ node_js:
     - node
 
 script:
+    - npm install
+    - npm run lint
+    - npm run gen_data
     - npm run build
     - npm run test
 
