--- a/package.json
+++ b/package.json
@@ -12,16 +12,14 @@
     "gen_data": "node ci/get_images.js",
     "prestart": "npm install",
     "start": "brunch watch --server",
-    "prebuild": "npm run gen_data && npm install",
     "build": "brunch build --production",
-    "lint": "eslint . --ext .js --ext .tag --ignore-pattern public || true",
+    "lint": "eslint . --ext .js --ignore-pattern public || true",
     "test": "phantomjs test/phantom_index.js && phantomjs test/phantom_waifu.js"
   },
   "dependencies": {},
   "devDependencies": {
     "auto-reload-brunch": "*",
     "autoprefixer-stylus": "*",
-    "babel-brunch": "*",
     "brunch": "*",
     "clean-css-brunch": "*",
     "css-brunch": "*",
@@ -29,10 +27,8 @@
     "jade-brunch": "*",
     "javascript-brunch": "*",
     "phantomjs": "*",
-    "rollup-brunch": "*",
-    "rollup-plugin-babel": "*",
-    "rollup-plugin-riot": "*",
     "stylus-brunch": "*",
-    "uglify-js-brunch": "*"
+    "uglify-js-brunch": "*",
+    "eslint": "*"
   }
 }
