--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "lint": "eslint . --ext .js --ignore-pattern public",
         "gen_data": "node ci/get_images.js",
+
+        "start": "webpack-dev-server",
         "build": "webpack",
         "build:p": "webpack -p",
         "build:profile": "webpack --profile --json > stats.json",
