CV: stop using regex to check whether second date is provided

--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "lint": "eslint . --ext .js --ignore-pattern public",
         "gen_data": "node ci/get_images.js",
-
         "start": "webpack-dev-server",
         "build": "webpack",
         "build:p": "webpack -p",
@@ -28,34 +27,35 @@
     },
     "homepage": "https://github.com/DoumanAsh/DoumanAsh.github.io#readme",
     "devDependencies": {
-        "webpack": "*",
-        "webpack-dev-server": "*",
-        "raw-loader": "*",
-        "dateformat": "*",
-        "html-webpack-plugin": "*",
-        "script-ext-html-webpack-plugin": "*",
-        "extract-text-webpack-plugin": "*",
-        "pug": "^2.0.0-rc.1",
-        "jstransformer-markdown-it": "*",
-        "pug-loader": "*",
-        "file-loader": "*",
-        "json5-loader": "*",
-        "eslint": "*",
-        "eslint-plugin-compat": "*",
-        "eslint-loader": "*",
+        "autoprefixer": "*",
         "babel-core": "*",
-        "babel-plugin-inferno": "*",
-        "babel-preset-es2015": "*",
-        "babel-plugin-transform-object-rest-spread": "*",
         "babel-loader": "*",
+        "babel-plugin-inferno": "*",
+        "babel-plugin-transform-object-rest-spread": "*",
+        "babel-preset-es2015": "*",
         "css-loader": "*",
-        "postcss-loader": "*",
+        "dateformat": "*",
+        "eslint": "*",
+        "eslint-loader": "*",
+        "eslint-plugin-compat": "*",
+        "extract-text-webpack-plugin": "*",
+        "file-loader": "*",
+        "html-webpack-plugin": "*",
+        "json5-loader": "*",
+        "jstransformer-markdown-it": "*",
         "postcss-import": "*",
+        "postcss-loader": "*",
         "postcss-nesting": "*",
-        "sugarss": "*",
+        "pug": "^2.0.0-rc.1",
+        "pug-loader": "*",
+        "raw-loader": "*",
+        "script-ext-html-webpack-plugin": "*",
         "stylelint": "*",
         "stylelint-config-standard": "*",
-        "autoprefixer": "*"
+        "sugarss": "*",
+        "moment": "*",
+        "webpack": "*",
+        "webpack-dev-server": "*"
     },
     "babel": {
         "presets": [
