--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "sugarss": "*",
         "moment": "*",
         "webpack": "*",
+        "webpack-cli": "*",
         "webpack-dev-server": "*"
     },
     "babel": {
