--- a/package.json
+++ b/package.json
@@ -29,29 +29,29 @@
     },
     "homepage": "https://github.com/DoumanAsh/DoumanAsh.github.io#readme",
     "devDependencies": {
-        "autoprefixer": "8",
-        "css-loader": "0.28",
+        "autoprefixer": "^8.6.5",
+        "css-loader": "^0.28.11",
         "dateformat": "3",
-        "eslint": "4",
+        "eslint": "^4.19.1",
         "eslint-loader": "2",
-        "eslint-plugin-compat": "2",
+        "eslint-plugin-compat": "^2.4.0",
         "extract-text-webpack-plugin": "3",
-        "file-loader": "1",
+        "file-loader": "^1.1.11",
         "html-webpack-plugin": "2",
         "json5-loader": "1",
-        "jstransformer-markdown-it": "2",
+        "jstransformer-markdown-it": "^2.1.0",
+        "moment": "2.20",
         "postcss-import": "11",
-        "postcss-loader": "2",
+        "postcss-loader": "^2.1.5",
         "postcss-nesting": "4",
-        "pug": "^2.0.0-rc.1",
-        "pug-loader": "2",
+        "pug": "^2.0",
+        "pug-loader": "^2.4",
         "raw-loader": "0.5",
         "script-ext-html-webpack-plugin": "1",
-        "stylelint": "9",
-        "stylelint-config-standard": "18",
+        "stylelint": "^9.3.0",
+        "stylelint-config-standard": "^18.2.0",
         "sugarss": "1",
-        "moment": "2.20",
-        "webpack": "3",
+        "webpack": "^3.12.0",
         "webpack-dev-server": "2"
     },
     "browserslist": [
