--- a/package.json
+++ b/package.json
@@ -1,75 +1,62 @@
 {
-  "name": "DoumanAsh.github.io",
-  "version": "1.0.0",
-  "private": true,
-  "description": "Static site generator",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-
-    "lint": "eslint . --ext .js --ignore-pattern public",
-    "gen_data": "node ci/get_images.js",
-
-    "build": "webpack",
-    "build:p": "webpack -p",
-    "build:profile": "webpack --profile --json > stats.json",
-    "build:analyze": "webpack-bundle-analyzer stats.json",
-    "build:s": "webpack-dev-server"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/DoumanAsh/DoumanAsh.github.io.git"
-  },
-  "keywords": [],
-  "author": "Douman <douman@gmx.se>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/DoumanAsh/DoumanAsh.github.io/issues"
-  },
-  "homepage": "https://github.com/DoumanAsh/DoumanAsh.github.io#readme",
-  "devDependencies": {
-      "webpack": "*",
-      "webpack-dev-server": "*",
-
-      "html-webpack-plugin": "*",
-      "script-ext-html-webpack-plugin": "*",
-      "extract-text-webpack-plugin": "*",
-      "pug": "^2.0.0-rc.1",
-      "jstransformer-markdown-it": "*",
-      "pug-loader": "*",
-
-      "file-loader": "*",
-      "json5-loader": "*",
-
-      "eslint": "*",
-      "eslint-plugin-compat": "*",
-      "eslint-loader": "*",
-
-      "babel-core": "*",
-      "babel-plugin-inferno": "*",
-      "babel-preset-es2015": "*",
-      "babel-plugin-transform-object-rest-spread": "*",
-      "babel-loader": "*",
-
-      "css-loader": "*",
-      "postcss-loader": "*",
-      "postcss-import": "*",
-      "postcss-nesting": "*",
-      "sugarss": "*",
-      "stylelint": "*",
-      "stylelint-config-standard": "*",
-      "autoprefixer": "*"
-  },
-
-  "babel": {
-      "presets": [
-          ["es2015", {"modules": false}]
-      ],
-      "plugins": ["transform-object-rest-spread"]
-  },
-
-  "browserslist": [
-      "Last 2 versions",
-      "ie 11"
-  ]
+    "name": "DoumanAsh.github.io",
+    "version": "1.0.0",
+    "private": true,
+    "description": "Static site generator",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "lint:style": "stylelint src/styles",
+        "lint:js": "eslint . --ext .js --ignore-pattern public",
+        "lint": "npm run lint:style && npm run lint:js",
+        "gen_data": "node ci/get_images.js",
+        "start": "webpack-dev-server",
+        "build": "webpack",
+        "build:p": "webpack -p",
+        "build:profile": "webpack --profile --json > stats.json",
+        "build:analyze": "webpack-bundle-analyzer stats.json",
+        "build:s": "webpack-dev-server"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/DoumanAsh/DoumanAsh.github.io.git"
+    },
+    "keywords": [],
+    "author": "Douman <douman@gmx.se>",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/DoumanAsh/DoumanAsh.github.io/issues"
+    },
+    "homepage": "https://github.com/DoumanAsh/DoumanAsh.github.io#readme",
+    "devDependencies": {
+        "autoprefixer": "^9.8.6",
+        "css-loader": "2",
+        "dateformat": "3",
+        "eslint": "5",
+        "eslint-loader": "^2.1.0",
+        "eslint-plugin-compat": "^2.5.1",
+        "file-loader": "3",
+        "html-webpack-plugin": "3",
+        "json5-loader": "1",
+        "jstransformer-markdown-it": "^2.1.0",
+        "mini-css-extract-plugin": "0.5",
+        "moment": "2.29",
+        "postcss-import": "12",
+        "postcss-loader": "3",
+        "postcss-nesting": "7",
+        "pug": "^2.0",
+        "pug-loader": "^2.4",
+        "raw-loader": "1",
+        "script-ext-html-webpack-plugin": "^2.1.5",
+        "stylelint": "^9.5.0",
+        "stylelint-config-standard": "^18.2.0",
+        "sugarss": "1",
+        "webpack": "^4.44.2",
+        "webpack-cli": "^3.3.12",
+        "webpack-dev-server": "^3.11.0"
+    },
+    "browserslist": [
+        "Last 2 versions",
+        "ie 11"
+    ]
 }
